--- a/examples/Color classification widget.ipynb
+++ b/examples/Color classification widget.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19487918647a4a0996f02e127e57542b",
+       "model_id": "f738c96f95aa409a84b9c6596a46f59b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -30,6 +30,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "......Model is created\n"
+     ]
     }
    ],
    "source": [
@@ -51,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "....................................................................................................................................................................................................................................................................done\n"
+      "........................................................................................................................................................done\n"
      ]
     }
    ],
@@ -69,7 +76,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5ea306648f84691b3c3234d357421b6",
+       "model_id": "e962ffe3eeb34f91b2c1c6cff5d380d6",
        "version_major": 2,
        "version_minor": 0
       },
