--- a/examples/Word2vec widget.ipynb
+++ b/examples/Word2vec widget.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Word2Vec model widgets\n",
+    "\n",
+    "This notebook introduces several examples of linking word2vec model in `ml5_ipynb` with jupyter widget `ipywidgets` to produce outputs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -18,7 +27,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "687ec554eeb1431a94d08244c84b8ff4",
+       "model_id": "bf9ac59e4e7749b184e90bfca676d37e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,8 +51,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What are the nearest words?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +90,9 @@
     "            return\n",
     "        w2v.nearest(word)\n",
     "        nearest_list = w2v.nearest_results[-1]\n",
+    "        if not nearest_list:\n",
+    "            print('No nearest word!')\n",
+    "            return\n",
     "        nearest_words = [i['word'] for i in nearest_list]\n",
     "        w_str = '<br>'.join(nearest_words)\n",
     "        nearest_output.value = w_str\n",
@@ -82,18 +101,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = widgets.interactive_output(get_nearest,{'val':nearest_button})\n",
+    "widgets.VBox([nearest,nearest_button,nearest_output,out])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What's the word between two words?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w1 = widgets.Text(\n",
+    "    value='',\n",
+    "    placeholder='Type a word',\n",
+    "    disabled=False\n",
+    ")\n",
+    "w2 = widgets.Text(\n",
+    "    value='',\n",
+    "    placeholder='Type a word',\n",
+    "    disabled=False\n",
+    ")\n",
+    "btw_output = widgets.HTML(\n",
+    "    value=\"\",\n",
+    ")\n",
+    "btw_button = widgets.ToggleButton(\n",
+    "    value=False,\n",
+    "    description='is',\n",
+    "    disabled=False,\n",
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='Description',\n",
+    ")\n",
+    "def get_btw(val):\n",
+    "    if val:\n",
+    "        word1 = w1.value\n",
+    "        word2 = w2.value\n",
+    "        if not word1 or not word2:\n",
+    "            print('Please type in both!')\n",
+    "            return\n",
+    "        w2v.average([word1,word2])\n",
+    "        btw_list = w2v.average_results[-1]\n",
+    "        if not btw_list:\n",
+    "            print('No between word!')\n",
+    "            return\n",
+    "        btw_words = [i['word'] for i in btw_list]\n",
+    "        w_str = '<br>'.join(btw_words)\n",
+    "        btw_output.value = w_str\n",
+    "    btw_button.value = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "btw_out = widgets.interactive_output(get_btw,{'val':btw_button})\n",
+    "widgets.VBox([widgets.HBox([widgets.HTML(value=\"Between \"),\n",
+    "                            w1, \n",
+    "                            widgets.HTML(value=\" and \"),\n",
+    "                            w2,btw_button]),\n",
+    "              btw_output,btw_out])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analogy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "is_word = widgets.Text(\n",
+    "    value='',\n",
+    "    placeholder='Type a word',\n",
+    "    disabled=False\n",
+    ")\n",
+    "to_word = widgets.Text(\n",
+    "    value='',\n",
+    "    placeholder='Type a word',\n",
+    "    disabled=False\n",
+    ")\n",
+    "is_word2 = widgets.Text(\n",
+    "    value='',\n",
+    "    placeholder='Type a word',\n",
+    "    disabled=False\n",
+    ")\n",
+    "analogy_output = widgets.HTML(\n",
+    "    value=\"\",\n",
+    ")\n",
+    "analogy_button = widgets.ToggleButton(\n",
+    "    value=False,\n",
+    "    description='is to',\n",
+    "    disabled=False,\n",
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='Description',\n",
+    ")\n",
+    "def get_analogy(val):\n",
+    "    if val:\n",
+    "        iw = is_word.value\n",
+    "        tw = to_word.value\n",
+    "        iw2 = is_word2.value\n",
+    "        if not iw or not tw or not iw2:\n",
+    "            print('Please finish typing!')\n",
+    "            return\n",
+    "        w2v.subtract([tw,iw])\n",
+    "        sub_list = w2v.subtract_results[-1]\n",
+    "        if not sub_list:\n",
+    "            print('Oops! Please type in other words!')\n",
+    "            return\n",
+    "        sub_w = sub_list[0]['word']\n",
+    "        w2v.add([sub_w,iw2])\n",
+    "        add_list = w2v.add_results[-1]\n",
+    "        if not add_list:\n",
+    "            print('Oops! No analogy for this example!')\n",
+    "        add_word = add_list[0]['word']\n",
+    "        analogy_output.value = add_word\n",
+    "    analogy_button.value = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "823453b4080340028cf30edbd2836fe9",
+       "model_id": "322a22ddcfc94dcfb9ed9c84f31ff0ef",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Textarea(value='', placeholder='Type a word'), ToggleButton(value=False, description='is neares…"
+       "VBox(children=(HBox(children=(Text(value='', placeholder='Type a word'), HTML(value=' is to '), Text(value='',…"
       ]
      },
      "metadata": {},
@@ -101,9 +256,21 @@
     }
    ],
    "source": [
-    "out = widgets.interactive_output(get_nearest,{'val':nearest_button})\n",
-    "widgets.VBox([nearest,nearest_button,nearest_output,out])"
+    "analogy_out = widgets.interactive_output(get_analogy,{'val':analogy_button})\n",
+    "widgets.VBox([widgets.HBox([is_word,\n",
+    "                            widgets.HTML(value=\" is to \"),\n",
+    "                            to_word,\n",
+    "                            widgets.HTML(value=\" as \"),\n",
+    "                            is_word2,analogy_button]),\n",
+    "              analogy_output,analogy_out])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
