add save and load functions

--- a/examples/Simple neural network examples.ipynb
+++ b/examples/Simple neural network examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9acbcd057e784005a923a96154c42b9f",
+       "model_id": "a30298ff58c04f6187510f8ef47a4da4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -34,6 +34,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "......Model is created\n"
+     ]
     }
    ],
    "source": [
@@ -81,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..................................................................done\n"
+      "...........................................done\n"
      ]
     }
    ],
@@ -92,6 +99,15 @@
     "  'batchSize': 12\n",
     "}\n",
     "nn.train_data(trainingOptions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nn.save()"
    ]
   },
   {
@@ -117,6 +133,31 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "[{'red-ish': 0.9895597696304321,\n",
+       "  'label': 'red-ish',\n",
+       "  'confidence': 0.9895597696304321},\n",
+       " {'blue-ish': 0.010440187528729439,\n",
+       "  'label': 'blue-ish',\n",
+       "  'confidence': 0.010440187528729439}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn.classify_callback_list[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -130,43 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'red-ish': 0.9906034469604492,\n",
-       "  'label': 'red-ish',\n",
-       "  'confidence': 0.9906034469604492},\n",
-       " {'blue-ish': 0.009396624751389027,\n",
-       "  'label': 'blue-ish',\n",
-       "  'confidence': 0.009396624751389027}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nn.classify_callback_list[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'blue-ish': 0.979840099811554,\n",
+       "[{'blue-ish': 0.9784854650497437,\n",
        "  'label': 'blue-ish',\n",
-       "  'confidence': 0.979840099811554},\n",
-       " {'red-ish': 0.020159941166639328,\n",
+       "  'confidence': 0.9784854650497437},\n",
+       " {'red-ish': 0.02151445671916008,\n",
        "  'label': 'red-ish',\n",
-       "  'confidence': 0.020159941166639328}]"
+       "  'confidence': 0.02151445671916008}]"
       ]
      },
      "execution_count": 9,
@@ -175,7 +191,132 @@
     }
    ],
    "source": [
-    "nn.classify_callback_list[1]"
+    "nn.classify_callback_list[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using saved model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e492a37e06104bd4bafd51cd64851db6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(neuralNetwork(status='deferring flush until render'), Text(value='deferring flush until render'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "......Model is created\n"
+     ]
+    }
+   ],
+   "source": [
+    "nn1 = ml5_nn.neuralNetwork()\n",
+    "nn1.initialize_framework()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".done\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = 'models/nn_color/model.json'\n",
+    "metadata = 'models/nn_color/model_meta.json'\n",
+    "weights = 'models/nn_color/model.weights.bin'\n",
+    "nn1.load(model, metadata, weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".done\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'red-ish': 0.9909659624099731,\n",
+       "  'label': 'red-ish',\n",
+       "  'confidence': 0.9909659624099731},\n",
+       " {'blue-ish': 0.009034055285155773,\n",
+       "  'label': 'blue-ish',\n",
+       "  'confidence': 0.009034055285155773}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn1.classify_data({'r': 255, 'g': 0, 'b': 0})\n",
+    "nn1.classify_callback_list[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".done\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'blue-ish': 0.9853614568710327,\n",
+       "  'label': 'blue-ish',\n",
+       "  'confidence': 0.9853614568710327},\n",
+       " {'red-ish': 0.014638460241258144,\n",
+       "  'label': 'red-ish',\n",
+       "  'confidence': 0.014638460241258144}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn1.classify_data({'r': 0, 'g': 0, 'b': 255})\n",
+    "nn1.classify_callback_list[-1]"
    ]
   },
   {
@@ -189,24 +330,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ede60aceb9c4198b053021c74933ad1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(neuralNetwork(status='deferring flush until render'), Text(value='deferring flush until render'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "options = {\n",
     "  'inputs': 1,\n",
@@ -220,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,17 +371,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...................................................................done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainingOptions={\n",
     "    'batchSize': 24,\n",
@@ -267,42 +385,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "..done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nn1.classify_data([300])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[{'right': 0.9976108074188232,\n",
-       "   'label': 'right',\n",
-       "   'confidence': 0.9976108074188232},\n",
-       "  {'left': 0.0023891092278063297,\n",
-       "   'label': 'left',\n",
-       "   'confidence': 0.0023891092278063297}]]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nn1.classify_callback_list"
    ]
