--- a/examples/Word2vec widget.ipynb
+++ b/examples/Word2vec widget.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf9ac59e4e7749b184e90bfca676d37e",
+       "model_id": "78fc7b51804d441b9e8662a42084adca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "............Model is ready\n"
+      "..................Model is ready\n"
      ]
     }
    ],
@@ -54,12 +54,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What are the nearest words?"
+    "## What are the Top 3 nearest words?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "        if not nearest_list:\n",
     "            print('No nearest word!')\n",
     "            return\n",
-    "        nearest_words = [i['word'] for i in nearest_list]\n",
+    "        nearest_words = [i['word'] for i in nearest_list[:3]]\n",
     "        w_str = '<br>'.join(nearest_words)\n",
     "        nearest_output.value = w_str\n",
     "    nearest_button.value = False"
@@ -101,9 +101,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9c89bf11e0c145ea92acf8864e987443",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Textarea(value='', placeholder='Type a word'), ToggleButton(value=False, description='is neares…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "out = widgets.interactive_output(get_nearest,{'val':nearest_button})\n",
     "widgets.VBox([nearest,nearest_button,nearest_output,out])"
@@ -113,12 +128,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What's the word between two words?"
+    "## What's the Top 3 words between two words?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +169,7 @@
     "        if not btw_list:\n",
     "            print('No between word!')\n",
     "            return\n",
-    "        btw_words = [i['word'] for i in btw_list]\n",
+    "        btw_words = [i['word'] for i in btw_list[:3]]\n",
     "        w_str = '<br>'.join(btw_words)\n",
     "        btw_output.value = w_str\n",
     "    btw_button.value = False"
@@ -162,9 +177,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "297caa7122a6493b93468cfd82b55cad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(HTML(value='Between '), Text(value='', placeholder='Type a word'), HTML(value=' …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "btw_out = widgets.interactive_output(get_btw,{'val':btw_button})\n",
     "widgets.VBox([widgets.HBox([widgets.HTML(value=\"Between \"),\n",
@@ -183,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +256,7 @@
     "            print('Oops! Please type in other words!')\n",
     "            return\n",
     "        sub_w = sub_list[0]['word']\n",
-    "        w2v.add([sub_w,iw2])\n",
+    "        w2v.add([iw2,sub_w])\n",
     "        add_list = w2v.add_results[-1]\n",
     "        if not add_list:\n",
     "            print('Oops! No analogy for this example!')\n",
@@ -237,13 +267,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "322a22ddcfc94dcfb9ed9c84f31ff0ef",
+       "model_id": "d3a8bf3e04d04004ae2bb6e99603d53a",
        "version_major": 2,
        "version_minor": 0
       },
