--- a/examples/Simple neural network examples.ipynb
+++ b/examples/Simple neural network examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a30298ff58c04f6187510f8ef47a4da4",
+       "model_id": "72650abfee0d4790a61e24bafeb781cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "......Model is created\n"
+      "..........Model is created\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...........................................done\n"
+      "............................................................................................done\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -129,21 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'red-ish': 0.9895597696304321,\n",
+       "[{'red-ish': 0.9900833964347839,\n",
        "  'label': 'red-ish',\n",
-       "  'confidence': 0.9895597696304321},\n",
-       " {'blue-ish': 0.010440187528729439,\n",
+       "  'confidence': 0.9900833964347839},\n",
+       " {'blue-ish': 0.009916686452925205,\n",
        "  'label': 'blue-ish',\n",
-       "  'confidence': 0.010440187528729439}]"
+       "  'confidence': 0.009916686452925205}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -171,21 +171,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'blue-ish': 0.9784854650497437,\n",
+       "[{'blue-ish': 0.9839764833450317,\n",
        "  'label': 'blue-ish',\n",
-       "  'confidence': 0.9784854650497437},\n",
-       " {'red-ish': 0.02151445671916008,\n",
+       "  'confidence': 0.9839764833450317},\n",
+       " {'red-ish': 0.01602357067167759,\n",
        "  'label': 'red-ish',\n",
-       "  'confidence': 0.02151445671916008}]"
+       "  'confidence': 0.01602357067167759}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,13 +203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e492a37e06104bd4bafd51cd64851db6",
+       "model_id": "e766b43d4014460da6e695ca8c1be2e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "  'confidence': 0.009034055285155773}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "  'confidence': 0.014638460241258144}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
