load keras model

--- a/examples/Load keras saved model using imageClassifier.ipynb
+++ b/examples/Load keras saved model using imageClassifier.ipynb
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccc009262a33440e93c27174004f2333",
+       "model_id": "21ec4fd44f6a4672b662a379bbb02993",
        "version_major": 2,
        "version_minor": 0
       },
@@ -73,15 +73,64 @@
     }
    ],
    "source": [
-    "nn = ml5_image.imageClassifier(path)"
+    "nn = ml5_image.imageClassifier()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "..Model is ready\n"
+     ]
+    }
+   ],
+   "source": [
+    "nn.keras_loadModel(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".done\n"
+     ]
+    }
+   ],
+   "source": [
+    "nn.keras_predict(train_list[0],[192,192,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'0': 5.315081580192782e-06,\n",
+       "  '1': 0.9999942779541016,\n",
+       "  '2': 3.6905586142665925e-08}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn.classify_callback_list"
+   ]
   },
   {
    "cell_type": "code",
