--- a/examples/Load keras saved model using imageClassifier.ipynb
+++ b/examples/Load keras saved model using imageClassifier.ipynb
@@ -10,6 +10,7 @@
     "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import ipywidgets as widgets\n",
     "%matplotlib inline"
    ]
   },
@@ -53,7 +54,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21ec4fd44f6a4672b662a379bbb02993",
+       "model_id": "502ce0a01f044fc182a8ae5c610768cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,41 +96,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(input_img, label):\n",
+    "    class_dict = {'0':'dobby','1':'train','2':'zucchini'}\n",
+    "    nn.keras_predict(input_img,[192,192,3])\n",
+    "    pred, confidence = sorted(nn.classify_callback_list[-1].items(),key= lambda x:-x[1])[0]\n",
+    "    file = open(input_img, \"rb\")\n",
+    "    image = file.read()\n",
+    "    img_wig = widgets.Image(\n",
+    "        value=image,\n",
+    "        format='png',\n",
+    "        width=192,\n",
+    "        height=192,\n",
+    "    )\n",
+    "\n",
+    "    true_wig = widgets.HTML(\n",
+    "        value = label,\n",
+    "        placeholder='',\n",
+    "        description='True',\n",
+    "        color = 'red'\n",
+    "    )\n",
+    "    pred_wig = widgets.HTML(\n",
+    "        value=f'{class_dict[pred]} ({confidence*100}%)',\n",
+    "        placeholder='',\n",
+    "        description='Prediction',\n",
+    "    )\n",
+    "    return widgets.Box([img_wig, widgets.VBox([true_wig, pred_wig])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".done\n"
+      "..done\n"
      ]
-    }
-   ],
-   "source": [
-    "nn.keras_predict(train_list[0],[192,192,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "68c569de2e2c4e5484da4a291d4c1c74",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "[{'0': 5.315081580192782e-06,\n",
-       "  '1': 0.9999942779541016,\n",
-       "  '2': 3.6905586142665925e-08}]"
+       "Box(children=(Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\…"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "nn.classify_callback_list"
+    "img_url= 'pic/dobby_online1.jpg'\n",
+    "predict(img_url,'dobby')"
    ]
   },
   {
@@ -137,87 +164,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# nn1.js_init(\"\"\"\n",
-    "#     let my_model = tf.loadLayersModel(path);\n",
-    "#     element.nn_info.network = my_model;\n",
-    "#     console.log(my_model);\n",
-    "# \"\"\",path=path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# nn1.js_init(\"\"\"\n",
-    "\n",
-    "#     //console.log(element.nn_info.network);\n",
-    "#     element.nn_info.network.predict(tf.zeros([1, 192, 192, 3])).dispose();\n",
-    "# \"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# nn1.js_init(\"\"\"\n",
-    "#     let my_model;\n",
-    "#     const demo = async () => {\n",
-    "\n",
-    "#       my_model = await tf.loadLayersModel(MODEL_PATH);\n",
-    "\n",
-    "#       // Warmup the model. This isn't necessary, but makes the first prediction\n",
-    "#       // faster. Call `dispose` to release the WebGL memory allocated for the return\n",
-    "#       // value of `predict`.\n",
-    "#       //my_model.predict(tf.zeros([1, 192, 192, 3])).dispose();\n",
-    "#     let img = new Image();\n",
-    "#     img.src = img_path; \n",
-    "#     img.width = 192;\n",
-    "#     img.height = 192;\n",
-    "#     async function predict(imgElement) {\n",
-    "#           console.log('Predicting...');\n",
-    "\n",
-    "#           // The first start time includes the time it takes to extract the image\n",
-    "#           // from the HTML and preprocess it, in additon to the predict() call.\n",
-    "#           const startTime1 = performance.now();\n",
-    "#           // The second start time excludes the extraction and preprocessing and\n",
-    "#           // includes only the predict() call.\n",
-    "#           let startTime2;\n",
-    "#           const logits = tf.tidy(() => {\n",
-    "#             // tf.browser.fromPixels() returns a Tensor from an image element.\n",
-    "#             const img = tf.browser.fromPixels(imgElement).toFloat();\n",
-    "\n",
-    "#             const normalized = img.div(255.0);\n",
-    "\n",
-    "#             // Reshape to a single-element batch so we can pass it to predict.\n",
-    "#             const batched = normalized.reshape([1, 192, 192, 3]);\n",
-    "\n",
-    "#             startTime2 = performance.now();\n",
-    "#             // Make a prediction through my_model.\n",
-    "#             return my_model.predict(batched);\n",
-    "#           });\n",
-    "\n",
-    "#           // Convert logits to probabilities and class names.\n",
-    "#           const classes = await getTopKClasses(logits);\n",
-    "#           const totalTime1 = performance.now() - startTime1;\n",
-    "#           const totalTime2 = performance.now() - startTime2;\n",
-    "#           console.log(`Done in ${Math.floor(totalTime1)} ms ` +\n",
-    "#               `(not including preprocessing: ${Math.floor(totalTime2)} ms)`);\n",
-    "\n",
-    "#         }\n",
-    "#         async function getTopKClasses(logits) {\n",
-    "#           const values = await logits.data();\n",
-    "#           console.log(values);\n",
-    "#         }\n",
-    "#         predict(img);\n",
-    "#     };\n",
-    "#     demo();\n",
-    "# \"\"\",MODEL_PATH=path, img_path=train_list[6])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
